# seqomplexity

./: .gitmodules  CMakeLists.txt  LICENSE
source/: CMakeLists.txt  GC_content.cpp  fast_GC_content.cpp  fast_sequence_complexity.cpp  seqomplexity.cpp
src/: fast_sequence_complexity.cpp  sequence_complexity.cpp
